# dot

./: .gitignore  README.md  pyproject.toml
src/dot/: __init__.py  api.py  core.py  kdf.py  keyschedule.py  modes.py  sbox.py  utils.py
